<resources>
    <string name="app_name">TribalTest</string>
    <string name="secret_key">m_Wobw7TeW5nfB_PaSI97sKUrS1Wz74e5xglg3v5cS8</string>
    <string name="foto_de_la_api">foto de la api</string>
    <string name="imagen_del_usuario">imagen del usuario</string>
    <string name="likes">Likes:</string>
    <string name="imagen_de_guartar_en_favoritos">imagen de guartar en favoritos</string>
    <string name="imagen_de_likes">imagen de likes</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="parece_que_no_tienes_ningun_favorito_aun">Parece que no tienes ningun favorito aun</string>
    <string name="eliminar">Eliminar</string>
    <string name="imagen_de_favoritos_del_menu_principal">imagen de favoritos del menu principal</string>
    <string name="imagen_de_fotos_del_menu_principal">imagen de fotos del menu principal</string>
    <string name="guardar_favoritos">Imagen se ha guardado en favoritos</string>
    <string name="borrar_favoritos">Imagen de ha borrado de favoritos</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="todo">TODO</string>

</resources>
